# toolforge

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  FEATURES.md  README.md  RUNBOOK.md  pyproject.toml  setup.bat  setup.ps1
.claude/commands/: commit.md
.git-hooks/: pre-commit
scripts/: inspect_registry.py  install-hooks.sh  run_schema_infer.py
src/toolforge/: __init__.py  cli.py  config.py
src/toolforge/agents/: __init__.py  assistant.py  base.py  judge.py  llm_client.py  planner.py  repair.py  user_sim.py
src/toolforge/agents/prompts/: assistant.md  judge.md  planner.md  repair.md  (+1 more)
src/toolforge/evaluation/: __init__.py  judge.py  metrics.py  repair.py  report.py  validators.py
src/toolforge/execution/: __init__.py  executor.py  mock_responder.py  session.py
src/toolforge/generator/: __init__.py  graph.py  loop.py  pipeline.py  state.py
src/toolforge/graph/: __init__.py  build.py  sampler.py
src/toolforge/io/: __init__.py  writer.py
src/toolforge/memory/: __init__.py  corpus_stats.py  corpus_tracker.py
src/toolforge/registry/: __init__.py  loader.py  models.py  normalizer.py  pipeline.py  schema_infer.py  semantic_typing.py  semantic_vocab.py  subset.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_repair_loop.py
tests/unit/: test_assistant.py  test_config.py  test_corpus_stats.py  test_execution.py  test_generate_loop.py  test_generator.py  test_graph_build.py  test_graph_sampler.py  test_judge.py  test_llm_client.py  test_metrics.py  test_models.py  test_planner.py  test_repair.py  test_user_simulator.py  test_validators.py
