[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolforge"
version = "0.1.0"
description = "Offline synthetic multi-turn tool-use conversation generator"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "networkx>=3.2",
    "langgraph>=0.2",
    "anthropic>=0.40",
    "openai>=1.40",
    "mem0ai>=0.1",
    "sentence-transformers>=3.0",
    "faker>=25",
    "structlog>=24",
    "tenacity>=8.5",
    "jsonschema>=4.22",
    "numpy>=1.26,<2.1",
]

[project.scripts]
toolforge = "toolforge.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
packages = ["toolforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests (require LLM calls, run with explicit -m e2e)",
    "integration: integration tests (may require fixtures)",
]
